--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_script:
 branches:
   only:
     - gh-pages
-before_install:
-  - "curl -L https://raw.githubusercontent.com/arunoda/travis-ci-meteor-packages/master/configure.sh | /bin/sh"
+script:
+    - npm test
