--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 nguage: node_js
+
 node_js:
-  - "0.10"
+- '0.10'
+
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-branches:
-  only:
-    - gh-pages
+- 'export CHROME_BIN=chromium-browser'
+- 'export DISPLAY=:99.0'
+- 'sh -e /etc/init.d/xvfb start'
+- 'npm install -g bower karma grunt-cli jshint'
+- 'npm install'
+
 script:
-    - gulp
+- ./node_modules/karma/bin/karma start --single-run
+
+branches:
+	only: 
+ - gh-pages	
