--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "gulp-minify-html": "^1.0.4",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
+    "mocha":"2.3.3",
     "karma": "^0.13.11",
-    "karma-chai": "^0.1.0"
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.1"
   },
   "dependencies": {
     "normalize.css": "^3.0.3",
