--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 nguage: node_js
-
 node_js:
-- '0.10'
+  - "0.10"
 
-before_script:
-- 'export CHROME_BIN=chromium-browser'
-- 'export DISPLAY=:99.0'
-- 'sh -e /etc/init.d/xvfb start'
-- 'npm install -g bower karma grunt-cli jshint'
-- 'npm install'
+before_install:
+  - npm install
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
-script:
-- ./node_modules/karma/bin/karma start --single-run
 
 branches:
-	only: 
- - gh-pages	
+  only:
+    - gh-pages
+script:
+- ./node_modules/karma/bin/karma start --single-run
