--- a/package.json
+++ b/package.json
@@ -1,45 +1,57 @@
 {
-  "name": "ConversorTemperatura",
-  "version": "0.0.1",
-  "description": "ULL ESIT Grado de Informática. Lab \"Temperature Converter\"",
+  "name": "practica3",
+  "version": "1.0.0",
+  "description": "Práctica que mejora el conversor de temperatura",
   "main": "temperatura.js",
-  
-  "scripts": {
-    "test": "open tests/index.html"
+  "directories": {
+  "test": "tests"
   },
+
+
+  "scripts": {
+    "test": "open  http://localhost:3000/tests/index.html",
+    "karma": "./node_modules/karma/bin/karma start --single-run"
+
+  },
+
+
   "repository": {
     "type": "git",
-    "url": "https://github.com/hectorinoman/ConversorTemperatura3.git"
+    "url": "git+https://github.com/hectorinoman/ConersorTemperatura3.git"
   },
+
+
   "keywords": [
-    "regexp"
+    "Práctica",
+    "3",
+    "conversor",
+    "temperatura"
   ],
-  "author": "Hector",
+
+
+  "author": "Hector Rodriguez Baez",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hectorinoman/ConversorTemperatura3/issues"
+    "url": "https://github.com/hectorinoman/ConersorTemperatura3/issues"
   },
-  "homepage": "https://github.com/hectorinoman/ConversorTemperatura3",
+
+
+  "homepage": "https://github.com/hectorinoman/ConersorTemperatura3#readme",
+
+  "dependencies": {},
   "devDependencies": {
+    "karma": "*",
+    "karma-mocha": "*",
+    "karma-chai": "*",
+    "karma-html2js-preprocessor": "*",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "*",
+    "mocha":"2.3.3",
     "chai": "^3.3.0",
     "del": "^2.0.2",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-minify-html": "^1.0.4",
-    "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.6",
-    "mocha":"2.3.3",
-    "karma": "^0.13.11",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.1"
-  },
-  "dependencies": {
-    "normalize.css": "^3.0.3",
-    "uglify-js": "^2.5.0"
-  },
-  
-  "scripts": {
-  "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
-},
+    "blanket" : "*",
+    "html2js": "^0.2.0"
+  }
 
+
+}
