--- a/package.json
+++ b/package.json
@@ -4,54 +4,45 @@
   "description": "Práctica que mejora el conversor de temperatura",
   "main": "temperatura.js",
   "directories": {
-  "test": "tests"
+    "test": "tests"
   },
-
-
   "scripts": {
     "test": "open  http://localhost:3000/tests/index.html",
     "karma": "./node_modules/karma/bin/karma start --single-run"
-
   },
-
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hectorinoman/ConersorTemperatura3.git"
   },
-
-
   "keywords": [
     "Práctica",
     "3",
     "conversor",
     "temperatura"
   ],
-
-
   "author": "Hector Rodriguez Baez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hectorinoman/ConersorTemperatura3/issues"
   },
-
-
   "homepage": "https://github.com/hectorinoman/ConersorTemperatura3#readme",
-
   "dependencies": {},
   "devDependencies": {
-    "karma": "*",
-    "karma-mocha": "*",
-    "karma-chai": "*",
-    "karma-html2js-preprocessor": "*",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "*",
-    "mocha":"2.3.3",
+    "blanket": "*",
     "chai": "^3.3.0",
     "del": "^2.0.2",
-    "blanket" : "*",
-    "html2js": "^0.2.0"
+    "html2js": "^0.2.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "*",
+    "karma-chai": "*",
+    "karma-chrome-extra-launcher": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-coverage": "^0.5.3",
+    "karma-firefox-launcher": "*",
+
+    "karma-jasmine": "^0.3.6",
+    "karma-mocha": "*",
+
+    "mocha": "2.3.3"
   }
-
-
 }
